# web_main_content_extraction_multipage

./: .gitignore  README.md  download_fasttext.py  requirements.txt
htmldiff/: __init__.py  cache.py  config.py  differ.py  exceptions.py  features.py  indexer.py  normalizer.py  orchestrator.py  parser.py  pyproject.toml
models/: sage_preprocessors.pt  scaler_stab.pkl  stability_v3_weak_gnn.pt
samples/dzen1/: index.html
samples/dzen_siblings/: dzen2.html  dzen3.html
samples/habr1/: index.html
samples/habr_siblings/: habr2.html  habr3.html
src/: annotate_dom.py  config.py  dataset.py  gnn_model.py  sage_features.py  sage_graph.py  stability_v3_inference.py  text_extraction.py  vectorize.py  xpath_utils.py
