[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "htmldiff"
version = "0.1.0"
description = "Per-node structural stability features via HTML tree diffing"
requires-python = ">=3.10"
dependencies = [
    "xmldiff>=2.4",
    "lxml>=4.9",
    "numpy>=1.24",
    "charset-normalizer>=3.0",
    "diskcache>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["htmldiff*"]
